hphp/hack/test/typecheck/private_final_class_meth.php.exp
File "private_final_class_meth.php", line 5, characters 26-37:
Class methods cannot be both `private` and `final`. (NastCheck[3097])
